--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.1.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
